@@ -1,3 +1,9 @@
+2002-08-23 01:44  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ARTContext.m: Implement handling of non-rectangle
+	clipping paths. Use it when rendering paths (but not for other
+	operators yet).
+
 2002-08-22 02:34  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ARTContext.m: (-DPSrectclip::::): Fix rounding when
